<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".LoginActivity">
    <!-- Login progress -->
    <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"/>

    <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_height="match_parent">
        <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:focusableInTouchMode="true"
                android:orientation="vertical">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/redPrimary"
                    android:textSize="50sp"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/app_name"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-light"
                    android:layout_marginBottom="10dp"
                    android:text="@string/app_subtitle"/>
            <EditText
                    android:id="@+id/txt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"/>

            <EditText
                    android:id="@+id/txt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:padding="16dp"
                    android:imeActionLabel="@string/sign_in_button"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"/>

            <com.google.android.material.button.MaterialButton
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textColor="#676767"
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/sign_in_button"
                    android:textStyle="bold"
                    android:backgroundTint="@color/whitePrimary"
                    android:layout_gravity="center_vertical"/>

            <com.google.android.material.button.MaterialButton
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textColor="#676767"
                    android:backgroundTint="@color/whitePrimary"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/email_sign_up_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_button"
                    android:textStyle="bold"/>
            <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:layout_weight="3"
                    android:layout_height="0dp">
                    <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_weight="1"
                            android:background="#d5d5d5"/>
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:gravity="center"
                            android:textColor="#676767"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-condensed-medium"
                            android:text="@string/separator_text"/>
                    <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_weight="1"
                            android:background="#d5d5d5"/>
            </LinearLayout>
            <!--<Button
                    android:id="@+id/google_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:backgroundTint="@color/whitePrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_google_logo"
                    android:text="Continue with Google"
                    android:textColor="#676767"
                    android:textStyle="bold"/>-->
            <Button
                    android:id="@+id/google_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:backgroundTint="@color/redPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/google_button"
                    android:textColor="#fff"
                    android:textStyle="bold"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>