<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardUseCompatPadding="true"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp">
    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                    android:id="@+id/profile_image"
                    android:contentDescription="@string/image_profile_description"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <LinearLayout
                    android:id="@+id/info_section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_image"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="#FFF"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">
                <com.example.rathings.utils.CapitalizedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:id="@+id/txt_name"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                <com.example.rathings.utils.CapitalizedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:id="@+id/txt_profession"/>
                <com.example.rathings.utils.CapitalizedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:id="@+id/txt_country"/>

                <LinearLayout
                        android:id="@+id/info_buttons_section"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:background="#FFF"
                        android:paddingBottom="10dp">
                        <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/change_language"
                                android:backgroundTint="@color/redPrimary"
                                style="?android:attr/borderlessButtonStyle"
                                android:layout_margin="5dp"
                                android:textColor="#FFF"
                                android:text="@string/change_language_button"/>
                        <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/btn_edit"
                                android:backgroundTint="@color/redPrimary"
                                style="?android:attr/borderlessButtonStyle"
                                android:layout_margin="5dp"
                                android:textColor="#FFF"
                                android:text="@string/edit_button"/>
                        <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/btn_signout"
                                android:layout_margin="5dp"
                                style="?android:attr/borderlessButtonStyle"
                                android:backgroundTint="@color/blackPrimary"
                                android:textColor="#FFF"
                                android:text="@string/sign_out_button"/>
                </LinearLayout>
            </LinearLayout>

            <!--follower / followed-->
            <LinearLayout
                    android:id="@+id/follow_section"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:baselineAligned="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/info_section"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="#FFF"
                    android:weightSum="3">

                <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_gravity="center_vertical">
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/txt_post"
                            android:textStyle="bold"
                            android:gravity="center"/>
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/txt_score"
                            android:textStyle="bold"
                            android:gravity="center"/>
                </LinearLayout>
                <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_gravity="center_vertical">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:id="@+id/txt_followers"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:layout_weight="1"/>
                </LinearLayout>

                <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_gravity="center_vertical">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:id="@+id/txt_followed"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:layout_weight="1"/>
                </LinearLayout>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/user_cards_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/follow_section"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>