...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorPrimary"
                    android:theme="?attr/actionBarTheme"
                    android:minHeight="?attr/actionBarSize"
                    android:backgroundTint="@color/redPrimary"
                    android:id="@+id/toolbar"
                    app:theme="@style/ToolbarTheme">
            </androidx.appcompat.widget.Toolbar>

            <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:id="@+id/scrollview"
...
            android:layout_gravity="bottom"
            android:orientation="horizontal">
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/added_comment"
                android:background="#fff"
                android:hint="@string/comment_hint"
                android:padding="10dp"
                android:layout_weight="1"/>
        <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton.Icon"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:backgroundTint="#FFF"
                app:icon="@drawable/ic_send_black_24dp"
                app:rippleColor="#FFF"
                app:iconTint="@color/redPrimary"
                android:id="@+id/publish_comment"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
